# xwl-notifier

./: CMakeLists.txt  README.md  main.c
systemd/: xwl-notifier.service
